--- a/infrastructure/monitoring/kube-prometheus-stack.yaml
+++ b/infrastructure/monitoring/kube-prometheus-stack.yaml
@@ -12,8 +12,57 @@ spec:
     chart: kube-prometheus-stack
     targetRevision: 79.7.0
     helm:
-      valueFiles:
-        - values.yaml
+      values: |
+        grafana:
+          enabled: true
+          ingress:
+            enabled: false # We'll use Gateway API instead
+          grafana.ini:
+            server:
+              root_url: https://grafana.kroknes.dev
+              serve_from_sub_path: false
+            auth:
+              disable_login_form: false
+            auth.anonymous:
+              enabled: false
+        prometheus:
+          enabled: true
+          prometheusSpec:
+            retention: 7d # Keep metrics for 7 days
+            storageSpec:
+              volumeClaimTemplate:
+                spec:
+                  accessModes: ["ReadWriteOnce"]
+                  resources:
+                    requests:
+                      storage: 3Gi
+            resources:
+              requests:
+                cpu: 200m
+                memory: 512Mi
+              limits:
+                cpu: 1000m
+                memory: 2Gi
+        alertmanager:
+          enabled: true
+          alertmanagerSpec:
+            storage:
+              volumeClaimTemplate:
+                spec:
+                  accessModes: ["ReadWriteOnce"]
+                  resources:
+                    requests:
+                      storage: 2Gi
+        nodeExporter:
+          enabled: true
+        kubeStateMetrics:
+          enabled: true
+        kubeEtcd:
+          enabled: false
+        kubeControllerManager:
+          enabled: false
+        kubeScheduler:
+          enabled: false
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
