--- a/clusters/production/postgres-operator.yaml
+++ b/clusters/production/postgres-operator.yaml
@@ -1,17 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cloudnative-pg-operator
+  name: postgres-operator
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
-  destination:
-    namespace: cnpg-system
-    server: https://kubernetes.default.svc
   project: default
   source:
     repoURL: https://cloudnative-pg.github.io/charts
-    targetRevision: 0.26.1
     chart: cloudnative-pg
+    targetRevision: 0.26.1
     helm:
       values: |
         crds:
@@ -21,6 +20,9 @@ spec:
           limits:
             cpu: 500m
             memory: 512Mi
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: cnpg-system
   syncPolicy:
     automated:
       prune: true
